# plotter-bot-3000

./: .gitignore  README.md  main.py  pyproject.toml
.streamlit/: config.toml
exporters/: svg.py  vpype.py
generators/: contours.py  noise_field.py  noise_preview.py
pages/: 01_axisdraw_controller.py  02_contour_generator.py
