[project]
name = "plotter-bot-3000"
version = "0.1.0"
description = "A toolkit for plotting things."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "noise>=1.2.2",
    "numpy>=2.4.4",
    "scikit-image>=0.26.0",
    "streamlit>=1.56.0",
    "svgwrite>=1.4.3",
    "vpype>=1.15.0",
]
